--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
-    "remixicon": "^4.3.0"
+    "remixicon": "^4.3.0",
+    "use-debounce": "^10.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
