--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-pdf/renderer": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.0",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "remixicon": "^4.3.0",
